<resources>
    <string name="app_name">Best Book</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="loginbutton">Log in</string>
    <string name="newuser">New user?</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="createaccount">Create account</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="searchforbooks">Search for books</string>
    <string name="nofavouritebooks">No favourite books yet</string>
    <string name="addreview">Add Review...</string>
    <string name="publishedby">Published By</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="verificationpositive">Verification email has been sent</string>
    <string name="verificationnegative">Email has NOT been sent </string>
    <string name="userregisteredpositive">User registered successfully</string>
    <string name="error">Error ! </string>
    <string name="linkpositive">Reset link sent to your Email</string>
    <string name="loginsuccess">Logged in Successfully</string>
    <string name="logoutsuccess">User Logged Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verifyemail">Verify Email</string>
    <string name="thisaccountnotverified">This account is not verified, do you want to resend the activation email?</string>
    <string name="pleaseenterpassword">Please enter a Password</string>
    <string name="pleaseenteremail">Please enter an Email</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enteremail">Enter your email to receive reset link</string>
    <string name="nightmode">Night Mode</string>
    <string name="notifications">Notifications</string>
</resources>