<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"/>

        <Switch
            android:id="@+id/nightmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nightmode"
            android:textSize="22sp"
            android:layout_margin="15dp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="22sp"
            android:layout_margin="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>